syntax = "proto3";

package proto;

option go_package = ".;proto";

import "google/protobuf/empty.proto";

service LoadBalancerAgent {
  rpc AddBinding (AddBindingRequest) returns (GenericReply);
  rpc DeleteBinding (DeleteBindingRequest) returns (GenericReply);
  rpc AddBackendServer (AddBackendServerRequest) returns (GenericReply);
  rpc DeleteBackendServer (DeleteBackendServerRequest) returns (GenericReply);
  rpc TrackSocks (google.protobuf.Empty) returns (SocksReply);
}

message AddBindingRequest {
  string name = 1;
  string address = 2;
  int32 port = 3;
}

message DeleteBindingRequest {
  string name = 1;
}

message AddBackendServerRequest {
  string name = 1;
  string address = 2;
  int32 port = 3;
}

message DeleteBackendServerRequest {
  string name = 1;
}

message GenericReply {
  bool success = 1;
}

message SocksReply {
  repeated SocksByState socksByState = 1;
}

message SocksByState {
                string  state = 1;
    repeated    Sock    socks = 2;
}

message Sock {
    uint32  uuid        = 1;
    string  localAddr   = 2;
    string  remoteAddr  = 3;
}